--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,6 +1,13 @@
 {% load static %}
 
 <link rel="stylesheet" href="{% static 'polls/style.css' %}">
+
+{% if user.is_authenticated %}
+   Welcome back, {{ user.username }}
+{% else %}
+   Please <a href="{% url 'login' %}?next={{request.path}}">Login to vote</a>
+{% endif %}
+
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
