--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -10,3 +10,6 @@
 </fieldset>
 <input type="submit" value="Vote">
 </form>
+
+<a href="{% url 'polls:results' question.id %}">Results</a>
+<a href="{% url 'polls:index' %}">Back to List of Polls</a>
