--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,10 +1,16 @@
 {% load static %}
 
 <link rel="stylesheet" href="{% static 'polls/style.css' %}">
+{% if messages %}
+    {% for message in messages %}
+        <div class="{{ message.tags }}">{{ message }}</div>
+    {% endfor %}
+{% endif %}
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
         <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+        <li><a href="{% url 'polls:results' question.id %}">Results</a></li>
     {% endfor %}
     </ul>
 {% else %}
