--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'polls/style.css' %}">
 
 <form action="{% url 'polls:vote' question.id %}" method="post">
 {% csrf_token %}
