--- a/templates/base.html
+++ b/templates/base.html
@@ -2,20 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}KU Polls{% endblock %}</title>
+    <title>KU Polls</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'polls/style.css' %}">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                {% if user.is_authenticated %}
-                    <li><a href="{% url 'logout' %}">Logout</a></li>
-                {% else %}
-                    <li><a href="{% url 'login' %}">Login</a></li>
-                {% endif %}
-            </ul>
-        </nav>
-    </header>
+    <div class="header">
+      {% if user.is_authenticated %}
+        {% if user.first_name %}
+          Hello, {{ user.first_name }}
+        {% else %}
+          Hello, {{ user.username.title }}
+        {% endif %}
+      {% else %}
+        Welcome to KU Polls
+      {% endif %}
+      <span style="float:right">
+        {% if user.is_authenticated %}
+            <a href="{% url 'logout' %}">Logout</a>
+        {% else %}
+            <a href="{% url 'login' %}">Login</a>
+        {% endif %}
+      </span>
+    </div>
+    </div>
+
+    <h2>
+    {% block title %} {% endblock %}
+    </h2>
+    {% if messages %}
+    <ul class="messages">
+        {% for msg in messages %}
+          <li class="{{msg.tags}}"><em>{{ msg }}</em></li>
+        {% endfor %}
+    </ul>
+    {% endif %}
     <main>
         {% block content %}
         {% endblock %}
