fixed guest can't enter detail vote

--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<link rel="stylesheet" href="{% static 'polls/style.css' %}">
 
 <form action="{% url 'polls:vote' question.id %}" method="post">
 {% csrf_token %}
@@ -9,15 +8,29 @@
     <legend><h1>{{ question.question_text }}</h1></legend>
     {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
     {% for choice in question.choice_set.all %}
-        <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
-            {% if user_vote and user_vote.choice_id == choice.id %}checked{% endif %}>
+        <input type="radio" id="choice{{ forloop.counter }}"
+           name="choice"
+           value="{{ choice.id }}"
+           {% if choice.id == selected_choice %} checked=True {% endif %}
+     />
         <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
     {% endfor %}
 </fieldset>
-<input type="submit" value="Vote">
+
+{% if question.can_vote %}
+    {% if user.is_authenticated %}
+        <input type="submit" value="Vote">
+    {% else %}
+        Please <a href="{% url 'login' %}?next={{request.path}}">Login</a> to submit a vote.
+    {% endif %}
+{% else %}
+Voting is <b>closed</b>.
+{% endif %}
 </form>
 
+<p>
 <a href="{% url 'polls:results' question.id %}">Results</a>
 <a href="{% url 'polls:index' %}">Back to List of Polls</a>
+</p>
 
 {% endblock %}
