--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -1,11 +1,20 @@
+@font-face {
+    font-family: 'Maaja';
+    src: url('/font/maaja.woff2') format('woff2'),
+         url('/font/maaja.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+}
 th, td { padding: 4px 6px; }
 th { background: lightgray; }
-* { font-family: Arial, Helvetica, sans-serif; }
+* { font-family: Maaja;
+    font-size: 1.5rem;
+}
 .header {
     padding: 4px;
     background: lightgray;
     color: blue;
-    font-size: 0.9rem;
+    /*font-size: 0.9rem;*/
 }
 .error {
     color: red;
@@ -17,7 +26,6 @@ th { background: lightgray; }
      font-size: 0.9rem;
     color: gray;
     margin-left: 2em;
-    /* background-color: #0056b3; */
     padding: 0.5rem 1rem;
     border-radius: 8px;
 }
@@ -29,4 +37,5 @@ li a {
 }
 body {
     background: white url("images/background.png") no-repeat;
+    color: white;
 }
