--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+<body>
 {% if user.is_authenticated %}
    Welcome back, {{ user.username }}
 {% else %}
@@ -13,10 +14,10 @@
     <ul>
     {% for question in latest_question_list %}
         <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
-        <li><a href="{% url 'polls:results' question.id %}">Results</a></li>
     {% endfor %}
     </ul>
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
+</body>
 {% endblock %}
